[metadata]
name = unit_test_advanced
version = 0.1.0
author = Rood Repo
author_email = roodrepo@gmail.com
description = Program execution plans for unit testing and inject custom data
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    unit-test
    inject data
    test driven development
url = https://github.com/roodrepo/unit_test_advanced
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False